# plux

./: .release-please-manifest.json  Cargo.toml  README.md  release-please-config.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  release-plz.yml
murus/: CHANGELOG.md  Cargo.toml
murus/src/: lib.rs  session.rs
plux/: CHANGELOG.md  Cargo.toml
plux/src/: config.rs  error.rs  git.rs  lib.rs  main.rs
plux/src/plugin/: mod.rs
