[workspace]
members = [ "murus","plux"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Nadir Fejzic <nadir@notfloor.com>"]
description = "Crates for tmux API and plugin manager implementations"
repository = "https://git.notfloor.com/nfejzic/plux"
homepage = "https://git.notfloor.com/nfejzic/plux"
readme = "README.md"
license = "Apache-2.0"

[workspace.dependencies]
thiserror = "2.0.16"
