[package]
name = "plux"
description = "Tmux plugin manager written in Rust"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
# murus = "0.1.1"
murus = { version = "0.2.0" } # _todo: replace path-based dependency with updated murus version
serde = { version = "1.0.228", features = ["serde_derive"] }
toml = "0.9.7"
thiserror.workspace = true
