[package]
name = "plux"
description = "Tmux plugin manager written in Rust"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
murus = { workspace = true }
serde = { version = "1.0.228", features = ["serde_derive"] }
toml = "1.1.2"
thiserror.workspace = true
